--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 #map {
-    height: 500px;
+    height: 400px;
+    width: 80%;
+    display: inline-block;
+}
+
+#panel {
+    width: 16%;
+    padding: 20px;
+    display: inline-block;
+    vertical-align: top;
 }
