--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,79 @@
-#map {
-    height: 400px;
-    width: 80%;
-    display: inline-block;
+body {
+    background-color: #a7a3a7;
 }
 
-#panel {
-    width: 16%;
-    padding: 20px;
-    display: inline-block;
-    vertical-align: top;
+/* Header */
+.jumbotron {
+    background-color: #010001;
+    margin-bottom: 0px;
+}
+
+.jumbotron .container {
+    padding: 0px;
+}
+
+.jumbotron h1 { 
+    font-family: 'Oswald', sans-serif;
+    background-color: #E80600;
+    color: #FEF4FF;
+    max-width: 40%;
+    padding: 10px;
+    box-shadow: 0px 5px 0px white;
+    text-align: center;
+    margin-bottom: -1px;
+}
+
+
+.jumbotron hr {
+    border: 0.5px dashed rgba(255,255,255,0.1);
+    border: 0.5px dashed #FEF4FF;
+    margin: 5px;
+    
+}
+
+.jumbotron .subtitle {
+    font-family: 'Oswald', sans-serif;
+    background-color: #E80600;
+    color: #FEF4FF;
+    box-shadow: 0px -5px 0px white;
+    max-width: 50%;
+    padding: 10px;
+    margin-top: -1px;
+    margin-left: 50%
+}
+
+.jumbotron .subtitle p {
+    margin: 0px;
+    text-align: right;
+}
+
+#byline {
+    font-size: 0.75rem;
+    background-color: #010001;
+    box-shadow: inherit;
+}
+
+/* Main Container */
+.main {
+    background-color: #FEF4FF;
+    margin-top: 0px;
+    padding: 30px;
+    padding-top: 15px;
+}
+
+.main h4 {
+    font-family: 'Oswald', sans-serif;
+    background-color: #E80600;
+    color: #FEF4FF;
+    padding: 5px;
+    padding-left: 15px;
+    margin-top: 5px;
+}
+
+.main p {
+    font-family: 'News Cycle', sans-serif;
+}
+
+.main col-md-* {
+    background-color: aqua;
 }
