--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ body {
 
 /* Main Container */
 .main {
-    background-color: #FEF4FF;
+    background-color: #f2f2f2;
     margin-top: 0px;
     padding: 30px;
     padding-top: 15px;
